[LayoutNG] Fix NGExclusionSpace perf for html5 spec.

This patch does three things:
1) Moves cloning the exclusion space in
   NGBlockLayoutAlgorithm::CreateConstraintSpaceForChild to later, as
   currently it get queried immediately after cloning, causing the
   exclusion space to regenerate its data.
2) Adds a bypasses for the cases where we are going to clear all floats
   and we can just return the maximum available area.
3) For the case where an element isn't clearing anything, just return
   LayoutUnit::Min().

Bug: 873799
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: Ie04b80a774348303b248d725cf402751f7a651a1
Reviewed-on: https://chromium-review.googlesource.com/1181125
Reviewed-by: Emil A Eklund <eae@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Commit-Queue: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584719}
Former-commit-id: 96d484e204b0a1c42afa3f65d7840df3624bab09